feat: documentation structure

--- a/simulacni_studie/main.tex
+++ b/simulacni_studie/main.tex
@@ -47,11 +47,41 @@
 \newpage
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\section{Úvod}
-
-\section{Popis provozu}
+\section{Úvod} % Matej 
+% KRATKY POPIS STREDISKA 
+%par slov o modelu 
+% hlavne cile simulace 
+\section{Popis střediska}
 \subsection{Plány střediska}
+% 2 planky z internetu
+\subsection{Režim provozu}
+% oteviraci hodiny, kdy se vlaky rozjedou, jak se doby lisi v zavislosti na obdobi, PERMANENTKY "
+\subsection{Lanové dráhy}
+% delka, doba vyjezdu, frakvence nabirani lidi, kapacita, kratky technicky popis (rozdil sedackova x kotva napr.)
+\subsection{Sjezdovky}
+%delka obtiznost, moznosti kam prejet 
+\subsection{Násvštěvníci}
+%chovani prichody rychost 
+\section{Model}  % Dan
+
+\subsection{Návrh modelu}
+
+\subsection{Popis modelu}
+
+\subsection{Implementace modelu}
+
+\subsection{Testování modelu}
+
+\section{Experimenty}
+
+\section{Vyhodnocení experimentů} %dan + matej
+
+\section{Závěr} % dan + matej
+
+\section{Zdroje informaci}
+
 
 
 
 \end{document}
+
